Fix alignement of main nav on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ footer nav ul li
 	width: 20%;
 	height: 85px;
 	margin-top:0px;
-	margin-right: -5px;
+	margin-left: -5px;
 	list-style-type : none;
 	font-size: 12px;
 	text-align: center;
@@ -232,7 +232,7 @@ footer nav ul li
 footer nav a
 {
 	display: inline-block;
-	width:260px;
+	width:100%;
 	text-decoration: none;
 	color: rgb(150,150,150);
 	vertical-align: top;
@@ -240,7 +240,6 @@ footer nav a
 
 footer nav a.linkimg
 {
-	width:100%;
 	height: 50px;
 	text-decoration: none;
 	color: rgb(100,100,100);
